corrected alignment of sepeartor

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,6 @@ body {
   background-color: black;
   color: white;
   height: 100vh;
-  margin: 0;
   font-weight: 900;
   -webkit-text-stroke: 1px black;
   color: red;
@@ -182,13 +181,15 @@ h1 {
   height: 25%;
   background-image: url('../Images/doom-logo.png');
   background-position: center;
-  background-size: 500px 200px;
+  background-size: 475px 150px;
   background-repeat: no-repeat;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
 }
 .seperator {
- display: flex;
- justify-content: center;
-
+  display: flex;
+  justify-content: center;
+  margin: -20px 0 0 0;
 }
 .displayInfo {
   height: 600px;
